--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ input[type=number] {
     margin-top: 8%;
     display: flex;
     flex-direction: column;
-    min-width: 100px;
-    width: 350px;
+    width: 450px;
     height: 70vh;
     background-color: #101e42;
     
@@ -77,4 +76,10 @@ input[type=number] {
 }
 .span-2{
     flex-basis : 50%;
+}
+@media only screen and (max-width: 600px){
+    .container{
+        width: 90%;
+        height: 90vh;
+    }
 }
